--- a/ABC-challenge/index.html
+++ b/ABC-challenge/index.html
@@ -336,16 +336,23 @@
         <!-- V -->
         <!-- Reference letter A for help, all details should be the same except for the letter in the h1 tag, the description in the h3 tag, and the path to the image "src". -->
         <div class="row">
-          <h1 class="display-1">V</h1>
-            <div class="col-4"><h3>For Volleyball</h3>
+            <div class="col-4">
+                <h1 class="display-1">V</h1>
+                <h3>For Volleyball</h3>
             </div>
             <div class="col-8">
                 <!-- insert pathway to image inside the quotation marks in the 'src' -->
                 <img src="photos/V-volleyball.jpg" class="img-thumbnail">
-              
-                <h1 class="display-1">W</h1>
-
-                <h3>For W</h3>
+            </div>
+        </div>
+        <hr>
+        <hr>
+        <!-- W -->
+        <!-- Reference letter A for help, all details should be the same except for the letter in the h1 tag, the description in the h3 tag, and the path to the image "src". -->
+        <div class="row">
+            <div class="col-4">
+            <h1 class="display-1">W</h1>
+            <h3>For W</h3>
             </div>
             <div class="col-8">
                 <!-- insert pathway to image inside the quotation marks in the 'src' -->
